--- a/css/normalize.css
+++ b/css/normalize.css
@@ -262,6 +262,11 @@
   textarea {
     overflow: auto;
   }
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
   
   /**
    * 1. Add the correct box sizing in IE 10.
