--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ body {
     margin-bottom: 30px;
 }
 
+.navbar__panel {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+
 .navbar__menu {
     margin-right: auto;
 }
@@ -51,6 +57,11 @@ body {
 .button__link {
     color: inherit;
 }
+
+.close__menu {
+    display: none;
+}
+
 
 .button__primary {
     background: #256eeb;
@@ -95,7 +106,7 @@ body {
 .page_content {
     display: grid;
     grid-template-columns: 9fr 3fr;
-    grid-column-gap: 30px;
+    grid-column-gap: 10px;
 }
 
 .card__img {
@@ -113,11 +124,10 @@ body {
 .card {
     margin-bottom: 20px;
     text-decoration: none;
+    max-width: 264px;
+    margin-right: 15px;
 }
 
-.card:not(:nth-child(3n)) {
-    margin-right: 24px;
-}
 
 .card__title {
     color: #256EEB;
@@ -204,4 +214,333 @@ body {
     text-decoration: none;
     margin-bottom: 5px;
     
+}
+
+/* SWIPER */
+
+.content {
+    max-width: 460px;
+    margin-right: 30px;
+  }
+
+  .swiper {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 357px;
+    
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .swiper {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .swiper-slide {
+    background-size: cover;
+    background-position: center;
+  }
+
+  .mySwiper2 {
+    height: 80%;
+    width: 100%;
+  }
+
+  .mySwiper {
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+  }
+
+  .mySwiper .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+  }
+
+  .mySwiper .swiper-slide-thumb-active {
+    opacity: 1;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content__text {
+    color: #0A143A;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+  }
+
+  .main__single {
+    display: flex;
+    align-items:flex-start
+  }
+
+  .author__wripper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 264px;
+    margin-top: 25px;
+    margin-bottom: 30px;
+  }
+
+  .author__avatar {
+    max-width: 50px;
+    min-height: 50px;
+    object-fit: cover;
+  }
+
+  .author__name {
+    line-height: 16px;
+    font-size: 14px;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 4px;
+  }
+
+  .rating {
+    margin-bottom: 5px;
+  }
+
+  .rating__counter {
+    opacity: 0.5;
+    margin-left: 10px;
+  }
+  
+  .author__status {
+    font-size: 14px;
+  }
+
+  .author {
+    min-width: 264px;
+  }
+
+  .btn__block {
+    width: 100%;
+    height: 54px;
+    display: block;
+    margin-bottom: 14px;
+    border: none;
+  }
+
+  .button__success {
+    background-color: #14b4be;
+    border-radius: 5px;
+    color: #fff;
+  }
+  
+  .single__price {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 24px;
+
+  }
+
+  .page__title {
+    margin-top: 0;
+    margin-bottom: 25px;
+  }
+
+  .menu__button {
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    display: none;
+  }
+
+  
+
+
+  /* MEDIA */
+
+@media (max-width: 1200px){
+    .container {
+        max-width: 960px;
+    }
+
+    .cards a{
+        max-width: 600px;
+        height: auto;
+    }
+
+    .card {
+        width: 45%;
+    }
+
+    .card__img {
+        height: 200px;
+    }
+
+    .card__header {
+        max-width: 82%;
+    }
+    .container {
+        grid-template-columns: 12fr;
+    }
+
+    .sidebar a img {
+        display: none;
+    }
+}
+
+@media (max-width: 999px) {
+    .container {
+        max-width: 740px;
+    }
+
+
+    .card__img {
+        height: 150px;
+        width: 100%;
+    }
+
+    .card__header {
+        max-width: 100%;
+    }
+
+    .container {
+        grid-template-columns: 12fr;
+    }
+
+    
+}
+
+@media (max-width: 780px) {
+    .container {
+        max-width: 560px;
+    }
+
+    .cards a{
+        max-width: 400px;
+        height: auto;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .page_content {
+        grid-template-columns: 7fr 5fr;
+    }
+
+    .menu__button {
+        display: block;
+    }
+
+    .navbar__panel {
+        position: fixed;
+        right: 0;  
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 9;
+        flex-direction: column;
+        align-items:center;
+        justify-content: center;
+        transition: transform 0.2s opacity 0.2s;
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    .is-open {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
+    
+    .navbar__menu {
+        margin-left: auto;
+        margin-bottom: 20px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items:center;
+        justify-content: center;
+    }
+
+    .menu__item:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .button__group {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .close__menu {
+        display: block;
+        border: none;
+        background-color: #fff;
+        position: absolute;
+        right: 30px;
+        top: 50px;
+        cursor: pointer;
+    }
+
+    .container {
+        grid-template-columns: 12fr;
+    } 
+    
+    .main__single {
+        flex-wrap: wrap;
+    }
+
+    .search__button__text {
+        display: none;
+    }
+    
+}
+
+@media (max-width: 576px) {
+    
+
+    .page_content {
+        grid-template-columns: 12fr;
+    }
+
+    .cards {
+        display: block;
+    }
+
+    .card__img {
+        height: auto;
+        width: 100%;
+    }
+    
+    .card {
+        margin-right: 0;
+    }
+
+   
+
+
 }
